# fitsync

./: .env.example  LICENSE  README.md  docker-compose.yaml  generate_password.py  main.py  pyproject.toml
clients/postgres/: __init__.py
db/: init.sql
